--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,29 @@ Currently we have more than 260 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Philipp Gasteiger, Xgasteiger Xmunichx Xde
+<br><b>Date:</b> Wed, 26 Oct 2011 10:37:05 +0200
+<pre>
+How many hosts have you installed using fai? <b>~10</b>
+Which version of fai are you using? <b>3.4.7</b>
+Which version are you using as your install kernel? Plain Debian kernel
+
+Which types of hosts are you installing with fai? Desktops, Notebooks, Web Server, Mail Server
+
+How do you boot your hosts? Network
+Does the default install kernel recognize all your hardware? Yes!
+Which drivers are missing? None
+
+Do you manage your configuration space under version control? Yes with Git
+How big is your config space (Mbytes, # of files)? 10 MB, #75
+How many files do you have in ../config/files? 36
+
+<b>What is the business of your company/organisation?</b> Online Services, <a href="http://www.munichx.de/">munichx e.K.</a>
+<br><b>Additional comments:</b> Thanks for the good Software, our team likes it a 
+lot and it makes installations much easier! 
+</pre> <HR>
+
+
 <b>From:</b> Michael Fladerer
 <br><b>Date:</b> Fri, 7 Oct 2011 18:12:27 +0200
 <pre>
