--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -76,7 +76,7 @@ fai@informatik.uni-koeln.de</A> or the fai mailling list.
 <ul>
 <li> This CD image can install Debian 6, CentOS 6 and Scientific Linux Cern 6
 <li>
-<a href=faicd-multi-distrib-3.4.8.iso>ISO image for i686</a>,  <a href=faicd-multi-distrib-3.4.8.iso>md5sum</a> (using FAI 3.4.8, kernel 2.6.32, size 686MB)
+<a href=faicd-multi-distrib-3.4.8.iso>ISO image for i686</a>,  <a href=faicd-multi-distrib-3.4.8.iso.md5>md5sum</a> (using FAI 3.4.8, kernel 2.6.32, size 686MB)
 
 <li> For Debian it uses the package mirror on the CD, for CentOS and SLC it connects to the fastest network mirror
 
