--- a/sources/index.html
+++ b/sources/index.html
@@ -39,13 +39,13 @@ The FAI software is divided into several packages:
 </ul>
 
 <ul>
-<li> <A href="http://anonscm.debian.org/viewvc/fai/">Source Code</A> via http
+<li> <A href="https://github.com/faiproject/fai">Source Code</A> via http
 <li> Checkout the sources: 
 <p>
 <div class="featurebox"><h3>
-<pre>svn co svn://svn.debian.org/svn/fai/trunk fai-sources</pre>
+<pre>git clone git://github.com/faiproject/fai.git</pre>
 </h3></div>
-<li> <a href=http://lists.alioth.debian.org/pipermail/fai-commit/>svn commit mails</a>
+<li> <a href=http://lists.alioth.debian.org/pipermail/fai-commit/>git commit mails</a>
 <li> <a href="/sources/news.html">NEWS</A>: user visible changes of the sources. <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>Detailed changelog</a>.
 
 <li> List of <a href="http://wiki.fai-project.org/index.php/Variables">important variables</a> inside FAI
