add new fai-cd image using linux 3.1

--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -50,6 +50,12 @@ pictures</a> showing a complete installation from CD (<a
 
 <li>
 <a href=faicd64-3.4.8.iso>ISO image for amd64</a>,  <a href=faicd64-3.4.8.iso.md5>md5sum</a> (using FAI 3.4.8, kernel 2.6.32, size 601MB)
+
+
+<li>
+<a href=faicd-linux3.1-3.4.8.iso>ISO image for amd64 using Linux 3.1</a>,  <a href=faicd-linux3.1-3.4.8.iso.md5>md5sum</a> (using FAI 3.4.8, kernel 3.1.0-grml64, size 622MB)
+
+
 </ul>
 <p>
 Please send comments to 
@@ -72,7 +78,7 @@ fai@informatik.uni-koeln.de</A> or the fai mailling list.
 </ul>
 
 
-<h1>FAI multi-distribution CD</h1>
+<h3>FAI multi-distribution CD</h3>
 <ul>
 <li> This CD image can install Debian 6, CentOS 6 and Scientific Linux Cern 6
 <li>
