--- a/download/index.html
+++ b/download/index.html
@@ -52,7 +52,7 @@ how you can get the gpg key in your apt configuration
 
 <p>
 
-<li> FAI packages from official <A href=" http://fai-project.org/download/squeeze/">project repository</A> or
+<li> FAI packages from the official <A href=" http://fai-project.org/download/squeeze/">project repository</A> or
 from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 </ul>
 <hr />
