--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ needs, without any interaction necessary.
 
 <ul>
 
+<li>[25 November 2011] <b>Using Linux kernel 3.1 with FAI</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-November/009371.html">more ...</a></li>
 <li>[15 September 2011] <b>CentOS and Scientific Linux Cern support</b> <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-September/009243.html">more ...</a></li>
-<li>[25 May 2011] <b>New Images for FAI CD are available.</b> <a href="fai-cd">Get CD </a></li>
-<li>[10 May 2011] <b>FAI 3.4.8 packages are available.</b> <a href="news/fai-3.4.html">more ...</a></li>
-<li>[24 Sep 2010] The FAI project gets its own domain name. <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2010-September/008350.html">more ...</a></li>
+<li>[25 May 2011] New Images for FAI CD are available. <a href="fai-cd">Get CD </a></li>
+<li>[10 May 2011] FAI 3.4.8 packages are available. <a href="news/fai-3.4.html">more ...</a></li>
 <li>[21 Dec 2009] The FAI project celebrates its 10th anniversary. (<a href="/doc/10-jahre-fai.pdf">article in German)</a></li>
 </ul>
 
