add updated report from chip.de

--- a/reports/index.html
+++ b/reports/index.html
@@ -32,9 +32,30 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 
 <h1>User reports</h1>
 
-Currently we have more than 260 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
+Currently we have more than 270 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
 <p>
 <hr/>
+
+<b>From:</b> Steffen Knauf,  SKnauf X chip=DE
+<br><b>Date:</b> Fri, 23 Dec 2011 11:06:20 +0100
+<pre>
+How many hosts have you installed using fai? Round about <b>400 hosts</b>
+Which version of fai are you using? <b>3.4.7</b>
+Which version are you using as your install kernel? Customized 3.X Kernel
+
+Which types of hosts are you installing with fai? All type of servers, e.g. webserver, databaseserver....
+
+How do you boot your hosts?: PXE/DHCP
+Do you manage your configuration space under version control?: Yes, using Subversion
+How big is your config space (Mbytes, # of files)? 2,9MB / 459 Files
+How many files do you have in ../config/files?: 232
+What types of scripts are you using for local customization?: Shell,Perl,cfengine. We plan to use puppet in the future.
+
+<b>What is the business of your company/organisation?</b> Media, <a href="http://www.chip.de">CHIP Xonio Online GmbH</a>
+<br><b>Additional comments:</b> We use different FAI_ETC_DIR directories and nfsroots for Lenny and Squeeze, but the same config space.
+Thanks for your great work!
+</pre> <HR>
+
 
 <b>From:</b> Philipp Gasteiger, Xgasteiger Xmunichx Xde
 <br><b>Date:</b> Wed, 26 Oct 2011 10:37:05 +0200
