--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,35 @@ Currently we have more than 270 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b>  Liane Siebert, arch dot siebert ===vienna onedotagain at
+<br><b>Date:</b> Mon, 2 Jan 2012 14:47:47 +0100
+<pre>
+How many hosts have you installed using fai? <b>20</b> ASAP
+Which version of fai are you using? <b>3.2.17</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? desktops, mailserver
+
+How do you boot your hosts? PXE
+ via network (PXE, DHCP): fixed	addr., DHCP for guests only	
+
+Does the default install kernel recognize all your hardware? yes	
+Which drivers are missing? none
+Do you manage your configuration space under version control? no
+
+How big is your config space (Mbytes, # of files)? still under construction
+How many files do you have in ../config/files?	   still under construction
+What types of scripts are you using for local customization? bash
+
+<b>What is the business of your company/organisation?</b> architecture office, Architekturbüro Siebert
+<br><b>Additional comments:</b> 
+Final aim:
+Machines normally can boot and work without FAI, because no FAT-server is online
+otherwise all machines are building a cluster with diskless terminals for graphical
+work, next VM qemu is planned  
+</pre> <HR>
+
+
 <a id=chipxonio></a>
 <b>From:</b> Steffen Knauf,  SKnauf X chip=DE
 <br><b>Date:</b> Fri, 23 Dec 2011 11:06:20 +0100
