move some items from TOD to minor wishes

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -60,11 +60,8 @@ can be displayed
 <li> NFSROOT using NFS v4
 <li> --- TODO ---
 <li> rename task prepareapt (use non Debian name), maybe task_prepare_repository
-<li> add option -l to fai command. List status of fai. Show list of
-classes, date of last fai action
 <li> Make nfsroot generic, remove server specific configs (ongoing work)
 generic. Install client will receive those files later.
-<li> new action inventory
 
 <li> --- MINOR WISHES ---
 <li> send MAC address to faimond (or hostname), use BOOTIF for that?,
@@ -73,19 +70,21 @@ patch from lhm
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> faimond-gui: new option, remove host if everything went fine
 <li> add new command collect-mac
+<li> add option -l to fai command. List status of fai. Show list of
+classes, date of last fai action
+<li> new action inventory
 </ul>
 
 <p>
 
 <h2>Timeline for next major release</h2>
 <ul>
-<li> The next major release will be FAI 4.0 (planed for end of 2011)
-<li> The next beta version will be released during DebConf11
+<li> The next major release will be FAI 4.0 (planed for 2012)
 </ul>
 
 <HR>
 <ADDRESS>
-Thu, 21 Jul 2011 10:11:34 +0200
+Wed, 11 Jan 2012 19:25:22 +0100
 </ADDRESS>
 
       </div>
