update age of the project

--- a/features/index.html
+++ b/features/index.html
@@ -67,7 +67,7 @@ small part of your configuration to your local needs using hooks.
 </ul>
 
 <h1>FAI History</h1>
-FAI is rock-solid. It's now ten years old. FAI was started in 1999 at
+FAI is rock-solid. It's now more than ten years old. FAI was started in 1999 at
 the University of Cologne (<a href=http://www.uni-koeln.de>Universit&auml;t zu K&ouml;ln</a>), when
 <a href="http://www.informatik.uni-koeln.de/~lange">Thomas</a> had to
 organize an installation of a Linux cluster with one server and 16
