add video, minor layout changes

--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -27,12 +27,22 @@
       <div id="content">
 <!-- removed breadcrumb -->
 
-<h1>Sample log files</h1>
+<h2>Sample log files</h2>
 <ul>
 <li> <a href="/logs">Log files</a> of successfully installed computers, all in one <a href="/logs.tar.gz">tar file</a>
 </ul>
 
-<h1>The faimond GUI</h1>
+<h2>Videos</h2>
+
+<ul>
+<li> <a href="fai-cd.avi">Video</a> (3:30min, 3.5MB) of a <a href="/fai-cd">FAI CD</a> installation.
+<a href="fai-cd-win.avi">Video for Windows users</a>
+<li> <a href="http://www.youtube.com/watch?v=yLIZL_iyAww">Ubuntu Oneiric (11.10) installation</a>
+</ul>
+
+<p>
+
+<h2>The faimond GUI</h2>
 The FAI monitor daemon (faimond) receives small messages from each install
 client (<a href="/logs/faimond.log">sample log file of faimond</a>), which describes
 what each client is doing at the moment. The GUI creates a nice table
@@ -40,18 +50,14 @@ and is showing all actions in real time for all clients.
 <p> &nbsp;<p> 
 <img alt="An example of the faimond GUI" src="faimond.png" border="0"/>
 
-<h1>Video of an installation via CD</h1>
-
-<a href="fai-cd.avi">Video</a> (3:30min, 3.5MB) of a <a href="/fai-cd">FAI CD</a> installation.
-<a href="fai-cd-win.avi">Video for Windows users</a>
-
 <p>
 
-<h1>A slideshow of an installation via CD</h1>
+<h2>A slideshow of an installation via CD</h2>
 <p>
 Sample log file <a href="fai.txt">fai.log</a>.
 <a href="/slideshow/"><img alt="slideshow overview" src="slideshow-overview.png" border="0"/>
- 
+ </a>
+
       </div>
     </div>
   <div id="footer"></div>
