this topic is already done

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -58,8 +58,8 @@ can be displayed
 <li> load *.asc files containing keys by class names 
 <li> CentOS support 
 <li> NFSROOT using NFS v4
+<li> rename task_prepareapt to task_repository
 <li> --- TODO ---
-<li> rename task prepareapt (use non Debian name), maybe task_prepare_repository
 <li> Make nfsroot generic, remove server specific configs (ongoing work)
 generic. Install client will receive those files later.
 
