postponed most minor wishes to 4.1

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -62,14 +62,14 @@ can be displayed
 <li> --- TODO ---
 <li> Make nfsroot generic, remove server specific configs (ongoing work)
 generic. Install client will receive those files later.
-
-<li> --- MINOR WISHES ---
 <li> send MAC address to faimond (or hostname), use BOOTIF for that?,
 patch from lhm
+<li> add new command collect-mac
+
+<li> --- MINOR WISHES (will be postponed to 4.1) ---
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> faimond-gui: new option, remove host if everything went fine
-<li> add new command collect-mac
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
 <li> new action inventory
@@ -84,7 +84,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Wed, 11 Jan 2012 19:25:22 +0100
+Sun, 22 Jan 2012 16:17:17 +0100
 </ADDRESS>
 
       </div>
