move items to DONE

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -59,12 +59,11 @@ can be displayed
 <li> CentOS support 
 <li> NFSROOT using NFS v4
 <li> rename task_prepareapt to task_repository
+<li> add new command fai-new-mac
+<li> Make nfsroot generic, remove server specific configs
 <li> --- TODO ---
-<li> Make nfsroot generic, remove server specific configs (ongoing work)
-generic. Install client will receive those files later.
 <li> send MAC address to faimond (or hostname), use BOOTIF for that?,
 patch from lhm
-<li> add new command collect-mac
 
 <li> --- MINOR WISHES (will be postponed to 4.1) ---
 <li> new option for fcopy, that replaces variables in the source
@@ -84,7 +83,7 @@ classes, date of last fai action
 
 <HR>
 <ADDRESS>
-Sun, 22 Jan 2012 16:17:17 +0100
+Fri, 03 Feb 2012 14:19:41 +0100
 </ADDRESS>
 
       </div>
