--- a/sources/index.html
+++ b/sources/index.html
@@ -39,14 +39,13 @@ The FAI software is divided into several packages:
 </ul>
 
 <ul>
-<li> <A href="https://github.com/faiproject/fai">Source Code</A> via http
-<li> Checkout the sources: 
-<p>
+<li>
 <div class="featurebox"><h3>
 <pre>git clone git://github.com/faiproject/fai.git</pre>
 </h3></div>
+<li> <A href="https://github.com/faiproject/fai">Browsable source code</A> via http
 <li> <a href=http://lists.alioth.debian.org/pipermail/fai-commit/>git commit mails</a>
-<li> <a href="/sources/news.html">NEWS</A>: user visible changes of the sources. <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>Detailed changelog</a>.
+<li> <a href="/sources/news.html">NEWS</A>: user visible changes of the sources and <a href=http://packages.debian.org/changelogs/pool/main/f/fai/current/changelog>detailed changelog</a>.
 
 <li> List of <a href="http://wiki.fai-project.org/index.php/Variables">important variables</a> inside FAI
 
