--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -142,6 +142,8 @@ FAI. This code is no longer maintained.
 <h2>FAI documentation in German</h2>
 <ul>
 
+<li> <a href="https://www.pug.org/mediawiki/index.php/FAI_SPARC_Debian">Debian auf SPARC mit FAI</a>. Ein detailliertes HOWTO.
+
 <li> <a href="http://www.lug-erding.de/vortrag/FAI.pdf">Talk</a> at LUG Erding (3/2011)
 
 <li> <a hfref="http://www.wh-netz.de/knowledgebase/FaI">A Ubuntu description</a> (2010)
