--- a/download/index.html
+++ b/download/index.html
@@ -45,10 +45,10 @@ The FAI software is divided in several packages:
 <pre>deb http://fai-project.org/download squeeze koeln</pre>
 </h3></div>
 
-<li> The packages are signed with the gpg key of Thomas Lange. This is
-how you can get the gpg key in your apt configuration
+<li> The packages are signed with the gpg key of Thomas Lange. Two ways of getting the gpg key in your apt configuration
 
   <pre>gpg -a --recv-keys AB9B66FD; gpg -a --export AB9B66FD | apt-key add -</pre>
+  <pre>wget -O - http://fai-project.org/download/AB9B66FD.asc | sudo apt-key add -</pre>
 
 <p>
 
