add jenkins repository

--- a/sources/index.html
+++ b/sources/index.html
@@ -52,6 +52,21 @@ The FAI software is divided into several packages:
 </ul>
 
 
+<h2>Packages for testing of the master branch</h2>
+<ul>
+
+<li> Overview of the automatic build process:
+<a href="http://jenkins.grml.org/job/fai-binaries/">http://jenkins.grml.org/job/fai-binaries/</a>
+</ul>
+
+<ul>
+
+<li> Package reporitory for automatic builds
+<div class="featurebox"><h3>
+<pre>deb http://jenkins.grml.org/debian fai main</pre>
+</ul>
+
+
 <h1>Bugs</h1>
 <ul>
 <li> <a href="http://packages.qa.debian.org/fai">QA page</A> of FAI
