--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,32 @@ Currently we have more than 270 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Olaf Ohlenmacher, olf == obda. dddeee
+<br><b>Date:</b> Sat, 3 Mar 2012 20:17:29 +0100
+<pre>
+How many hosts have you installed using fai? <b></b>
+Which version of fai are you using? <b>3.4.8</b>
+Which version are you using as your install kernel? plain debian kernel
+
+Which types of hosts are you installing with fai? servers only (different standard services)
+
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware?
+Which drivers are missing? firmware-bnx2 (for Broadcom Network cards)
+
+Do you manage your configuration space under version control? yes, using git
+How big is your config space (Mbytes, # of files)? 477M, 110 files
+How many files do you have in ../config/files? #50
+What types of scripts are you using for local customization? bash, cfengine, perl
+
+<b>What is the business of your company/organisation?</b> government
+<br><b>Additional comments:</b> 
+We are using FAI since about four months for installation. The
+installation base is quite small yet. But I think it will increase
+rapidly ;-) You have done some quit good work!
+</pre> <HR>
+
+
 <b>From:</b>  Liane Siebert, arch dot siebert ===vienna onedotagain at
 <br><b>Date:</b> Mon, 2 Jan 2012 14:47:47 +0100
 <pre>
