add number of hosts

--- a/reports/index.html
+++ b/reports/index.html
@@ -39,7 +39,7 @@ Currently we have more than 270 detailed reports. Please also fill out the <a hr
 <b>From:</b> Olaf Ohlenmacher, olf == obda. dddeee
 <br><b>Date:</b> Sat, 3 Mar 2012 20:17:29 +0100
 <pre>
-How many hosts have you installed using fai? <b></b>
+How many hosts have you installed using fai? <b>7 as yet</b>
 Which version of fai are you using? <b>3.4.8</b>
 Which version are you using as your install kernel? plain debian kernel
 
