add info about CD installation

--- a/features/index.html
+++ b/features/index.html
@@ -45,6 +45,7 @@ among several machines.
 <li> FAI is lightweight. No special daemons are running, no database setup
 is needed. It's architecture independent, since it consists
 only of shell, Perl and Cfengine scripts.
+<li> Easy creation of customized unattended ISO
 <li> Besides initial installations, it is used for daily maintenance,
 and can set up chroot environments.
 <li> Compared to tools like kickstart or cobbler for Red Hat, autoyast for SUSE or
@@ -64,6 +65,7 @@ small part of your configuration to your local needs using hooks.
 <li> Install and configure software packages 
 <li> Customize OS and software to your local needs
 <li> Reboot freshly installed machine
+<li> All this can also be done via an unattended CD installation
 </ul>
 
 <h1>FAI History</h1>
