beta version available

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -78,12 +78,12 @@ classes, date of last fai action
 
 <h2>Timeline for next major release</h2>
 <ul>
-<li> The next major release will be FAI 4.0 (planed for 2012)
+<li> The next major release will be FAI 4.0 (beta version already available)
 </ul>
 
 <HR>
 <ADDRESS>
-Fri, 03 Feb 2012 14:19:41 +0100
+Thu, 22 Mar 2012 00:12:17 +0100
 </ADDRESS>
 
       </div>
