--- a/cluster/index.html
+++ b/cluster/index.html
@@ -58,7 +58,7 @@ with 120 dual Athlon nodes. This cluster was on the 94th position in the <a
 href=http://www.top500.org/list/2002/06/>top500.org</a> supercomputer list in june 2002
 <li>
 The <a href=http://www.ai.sri.com/centibots/tech_design/index.html>100
-Robots Project</a>
+Robots Project</a> (2002)
 <li>
 The university of California Santa Barbara has a 
 16 node dual AMD 1.8Ghz <a href=http://www.cs.ucsb.edu/~dbl/dblcluster.html>Beowulf cluster</a> for database and distributed systems research
