replace experimental packages with jenkins packages

--- a/faq/index.html
+++ b/faq/index.html
@@ -71,12 +71,12 @@ of package fai-doc for instructions.</p>
 deb http://fai-project.org/download lenny koeln
 </pre></h3></div>
 
-<p>If you want to get the <strong>experimental</strong> FAI versions, please use
+<p>If you want to get the <strong>newest</strong> test versions of FAI, please use
 the following entry in /etc/apt/sources.list and /etc/fai/apt/sources.list:</p>
 
 <div class="featurebox"><h3> <!-- brrrrrr, this is dirty, Thomas!-->
 <pre>
-deb http://fai-project.org/download experimental koeln
+deb http://jenkins.grml.org/debian fai main
 </pre></h3></div>
 
 <p><strong>TODO/Discuss:</strong> provide 3.4.x for lenny and etch?</p>
