--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,30 @@ Currently we have more than 270 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Sebastien Varrette, first . lastname @ uni.lu
+<br><b>Date:</b> Thu, 5 Apr 2012 11:37:25 +0200
+<pre>
+How many hosts have you installed using fai? <b>151</b>
+Which version of fai are you using? <b>3.4.7</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? Beowulf cluster computing nodes
+
+How do you boot your hosts? via network (PXE, DHCP)
+Does the default install kernel recognize all your hardware? no
+Which drivers are missing? bnx2 (from non-free package firmware-bnx2)
+
+Do you manage your configuration space under version control? yes
+How big is your config space (Mbytes, # of files)? 420M, 243
+How many files do you have in ../config/files? 122
+What types of scripts are you using for local customization? shell 
+
+<b>What is the business of your company/organisation?</b> education, <a href="http://www.uni.lu">University of Luxembourg</a>
+<br><b>Additional comments:</b> 
+We are using FAI to deploy the computing nodes of our <a href="http://hpc.uni.lu">clusters</a> (<a href="https://hpc.uni.lu/tiki-index.php?page=Gaia%20overview">pictures</a>)
+</pre> <HR>
+
+
 <b>From:</b> Olaf Ohlenmacher, olf == obda. dddeee
 <br><b>Date:</b> Sat, 3 Mar 2012 20:17:29 +0100
 <pre>
