move item to minor wishes, update release info

--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -62,10 +62,10 @@ can be displayed
 <li> add new command fai-new-mac
 <li> Make nfsroot generic, remove server specific configs
 <li> --- TODO ---
+<li> make the release ;-)
+<li> --- MINOR WISHES (will be postponed to 4.1) ---
 <li> send MAC address to faimond (or hostname), use BOOTIF for that?,
 patch from lhm
-
-<li> --- MINOR WISHES (will be postponed to 4.1) ---
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
 <li> faimond-gui: new option, remove host if everything went fine
@@ -78,12 +78,13 @@ classes, date of last fai action
 
 <h2>Timeline for next major release</h2>
 <ul>
-<li> The next major release will be FAI 4.0 (beta version already available)
+<li> The next major release will be FAI 4.0 (first release candidate will be
+released in april/may)
 </ul>
 
 <HR>
 <ADDRESS>
-Thu, 22 Mar 2012 00:12:17 +0100
+Fri, 13 Apr 2012 03:58:54 +0200
 </ADDRESS>
 
       </div>
