--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -62,13 +62,13 @@ can be displayed
 <li> add new command fai-new-mac
 <li> Make nfsroot generic, remove server specific configs
 <li> --- TODO ---
-<li> make the release ;-)
+<li> relax and recover
 <li> --- MINOR WISHES (will be postponed to 4.1) ---
 <li> send MAC address to faimond (or hostname), use BOOTIF for that?,
 patch from lhm
 <li> new option for fcopy, that replaces variables in the source
 file. Use %%_VARIABLENAME_%% ? check a mail concerning that
-<li> faimond-gui: new option, remove host if everything went fine
+<li> fai-monitor-gui: new option, remove host if everything went fine
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
 <li> new action inventory
@@ -76,15 +76,9 @@ classes, date of last fai action
 
 <p>
 
-<h2>Timeline for next major release</h2>
-<ul>
-<li> The next major release will be FAI 4.0 (first release candidate will be
-released in april/may)
-</ul>
-
 <HR>
 <ADDRESS>
-Fri, 13 Apr 2012 03:58:54 +0200
+Sat, 12 May 2012 11:38:34 +0200
 </ADDRESS>
 
       </div>
