upgrade to wheezy

--- a/download/index.html
+++ b/download/index.html
@@ -42,7 +42,7 @@ The FAI software is divided in several packages:
 <li> Entry for /etc/apt/sources.list and for /etc/fai/apt/sources.list: 
 <p>
 <div class="featurebox"><h3>
-<pre>deb http://fai-project.org/download squeeze koeln</pre>
+<pre>deb http://fai-project.org/download wheezy koeln</pre>
 </h3></div>
 
 <li> The packages are signed with the gpg key of Thomas Lange. Two ways of getting the gpg key in your apt configuration
@@ -52,7 +52,7 @@ The FAI software is divided in several packages:
 
 <p>
 
-<li> FAI packages from the official <A href=" http://fai-project.org/download/squeeze/">project repository</A> or
+<li> FAI packages from the official <A href=" http://fai-project.org/download/wheezy/">project repository</A> or
 from a <a href=http://cdn.debian.net/debian/pool/main/f/fai/>Debian mirror</a>.
 </ul>
 <hr />
