--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 FAI is a non-interactive system to install, customize and manage
 Linux systems and software configurations on computers as well as
 virtual machines and chroot environments, from small networks to
-large-scale infrastructures and clusters.
+large-scale infrastructures like clusters and cloud environments.
 <p>
 It's a tool for unattended mass deployment of Linux. You can take one
 or more virgin PC's, turn on the power, and after a few minutes,
