add link to A3 poster, no more doube A4 available

--- a/poster/index.html
+++ b/poster/index.html
@@ -43,7 +43,7 @@
 </td><td width="270"><div>
 <a href="/poster/poster_a4.pdf"><img alt="poster thumb" src="poster-thumb.png" border="0" ></a>
 </div>
-<a href="/poster/poster_double-a4.pdf">larger</a> version (two sides of A4).
+<a href="/poster/poster_a3.pdf">larger</a> DIN A3 version.
 </td></tr>
 </table>
 
