--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@ needs, without any interaction necessary.
 <li> Every stage can be customized via hooks</li>
 </ul>
 
+<!--
 <h2>Workshop </h2>
 
 <ul>
-<li>The last FAI workshop was held from 21-23 of october 2011 at Linuxhotel Essen (<a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-August/009207.html">announement</a>)</li>
+<li>The last FAI workshop was held from 21-23 of october 2011 at Linuxhotel Essen (<a href="https://lists.uni-koeln.de/pipermail/linux-fai/2011-August/009207.html">announcement</a>)</li>
 <li>Thanks to these companies and organisations for supporting the workshop:
 <li> Thomas-Krenn AG, Netways, Department of Computer Science, University of Cologne 
+-->
 
 <!--
 <li>Wiki page for the <a href="http://wiki.fai-project.org/wiki/DeveloperWorkshopJuly2010">workshop</a></li>
