--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,30 @@ Currently we have more than 270 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> anonymous math.fau.de
+<br><b>Date:</b> Mon, 10 Dec 2012 10:52:22 +0100
+
+<pre>
+How many hosts have you installed using fai? <b>~200</b>
+Which version of fai are you using? <b>3.4.8ubuntu2</b>
+Which version are you using as your install kernel? 3.2.0-33-generic ubuntu kernel
+
+Which types of hosts are you installing with fai? desktops (server)
+How do you boot your hosts? PXE, DHCP
+
+Does the default install kernel recognize all your hardware? no
+Which drivers are missing? hp-netxen (for hp dl585 g7)
+
+Do you manage your configuration space under version control? yes hg
+How big is your config space (Mbytes, # of files)? 8.9M, #1138
+How many files do you have in ../config/files? #1052
+
+What types of scripts are you using for local customization? puppet
+
+<b>What is the business of your company/organisation?</b> education, <a href="http://www.math.fau.de">Depmartment Mathematik FAU Erlangen-Nuernberg</a>
+</pre> <HR>
+
+
 <b>From:</b> Katarzyna Myrek, katarz y n a == myrek = pl, michal dot dwuznik notdotbut@ g m a i l.c o m
 <br><b>Date:</b> Sun, 7 Oct 2012 19:24:56 +0200
 <pre>
