add animated gif

--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -42,13 +42,16 @@
 
 <p>
 
-<h2>The faimond GUI</h2>
-The FAI monitor daemon (faimond) receives small messages from each install
-client (<a href="/logs/faimond.log">sample log file of faimond</a>), which describes
+<h2>The fai-monitor GUI</h2>
+The FAI monitor daemon (fai-monitor) receives small messages from each install
+client (<a href="/logs/faimond.log">sample log file of fai-monitor</a>), which describes
 what each client is doing at the moment. The GUI creates a nice table
-and is showing all actions in real time for all clients.
+and is showing all actions in real time for all clients. (Click on
+screenshot for animated gif)
 <p> &nbsp;<p> 
-<img alt="An example of the faimond GUI" src="faimond.png" border="0"/>
+
+<a href="fai-monitor.gif"><img alt="An example of the fai-monitor-gui"
+                  src="faimond.png" border="0"/></a>
 
 <p>
 
