--- a/screenshots/index.html
+++ b/screenshots/index.html
@@ -44,7 +44,7 @@
 
 <h2>The fai-monitor GUI</h2>
 The FAI monitor daemon (fai-monitor) receives small messages from each install
-client (<a href="/logs/faimond.log">sample log file of fai-monitor</a>), which describes
+client (<a href="/logs/fai-monitor.log">sample log file of fai-monitor</a>), which describes
 what each client is doing at the moment. The GUI creates a nice table
 and is showing all actions in real time for all clients. (Click on
 screenshot for animated gif)
