--- a/reports/index.html
+++ b/reports/index.html
@@ -36,6 +36,31 @@ Currently we have more than 270 detailed reports. Please also fill out the <a hr
 <p>
 <hr/>
 
+<b>From:</b> Paolo Miotto = paolo. miotto @at@ uniud dot it
+<br><b>Date:</b> Mon, 04 Feb 2013 14:01:00 +0100
+
+<pre>
+How many hosts have you installed using fai? <b>~40</b>, ~30 production hosts, ~10 development hosts
+Which version of fai are you using? <b>3.4.7</b> and working (slowly) on wheezy migration
+Which version are you using as your install kernel?  plain Debian kernel
+
+Which types of hosts are you installing with fai? H/A Clusters nodes, standalone servers
+How do you boot your hosts? all hosts (physical and Xen PV) are installed via network.
+
+Does the default install kernel recognize all your hardware?
+Which drivers are missing?  All hardware are recognized, only firmware from non-free is needed for
+   some of them.
+
+Do you manage your configuration space under version control?  Yes, under SVN, planning to switch to git
+
+How big is your config space (Mbytes, # of files)?  ~10M in 1.300 files
+How many files do you have in ../config/files? ~600
+What types of scripts are you using for local customization? shell script
+
+<b>What is the business of your company/organisation?</b> educational: <a href="http://ainf.uniud.it/">University of Udine's computer center</a>
+</pre> <HR>
+
+
 <b>From:</b> anonymous math.fau.de
 <br><b>Date:</b> Mon, 10 Dec 2012 10:52:22 +0100
 
@@ -79,7 +104,8 @@ How many files do you have in ../config/files? Lots of.
 
 What types of scripts are you using for local customization? Bash scripts for linux part, chntpw+ntfsclone for MS Windows part.
 
-<b>What is the business of your company/organisation?</b> <a href="http://agh.edu.pl/en">AGH University of Science and Technology</a> and <a href="http://www.fis.agh.edu.pl/indexe.html">Faculty of Physics and Applied Computer Science</a>
+<b>What is the business of your company/organisation?</b> Education
+<a href="http://agh.edu.pl/en">AGH University of Science and Technology</a> and <a href="http://www.fis.agh.edu.pl/indexe.html">Faculty of Physics and Applied Computer Science</a>
 <br><b>Additional comments:</b> 
 (What follows is written by Katarzyna Myrek, agreed upon by the parties involved, with K.M and M.D.
 remarks marked below when needed)
