--- a/reports/index.html
+++ b/reports/index.html
@@ -148,9 +148,10 @@ c) lots of software in Zenworks containers -> MS Office, web browsers, 'everyday
   needs' -> disposable VMs with root access for some classes, VMs tailored for some legacy software
   needs, tools to connect to remote lab equipment.
 
-M.D.: Cadence/EUROPRACTICE install - full range of ASIC development tools + various design kits (can't name them all due to NDAs)
-was pretty hard part, too...
-Close cooperation with IC design experts made it possible (ASICs designed here were/are/will be used in various applications -> from neurobiology experiments through X-ray diffractometry to high energy physics experiments)
+M.D.: Cadence/EUROPRACTICE install - full range of ASIC development tools + various design kits (can't name them
+all due to NDAs) was pretty hard part, too...
+Close cooperation with IC design experts made it possible (ASICs designed here were/are/will be used in
+various applications -> from neurobiology experiments through X-ray diffractometry to high energy physics experiments)
 Lab use of that requires quite some effort to run software packages certified for various RHEL versions
 to run on _one_ Debian, plus some logging/firewalling/scripting to reach the license servers and in the
 same time comply with non-disclosure-agreements.
@@ -426,7 +427,8 @@ How many hosts have you installed using fai? <b>~20</b>
 Which version of fai are you using? <b>3.4.8</b>
 Which version are you using as your install kernel? Plain Debian kernel.
 
-Which types of hosts are you installing with fai? Desktops, web server (intranet), assorted servers to support software development, build machines.
+Which types of hosts are you installing with fai? Desktops, web server (intranet), assorted servers to support software
+   development, build machines.
 
 How do you boot your hosts? Network.
 Does the default install kernel recognize all your hardware? All necessary for the installation
