--- a/reports/index.html
+++ b/reports/index.html
@@ -32,9 +32,39 @@ hr {margin: 1em 0;background:#777777;height:2px;color:#777777;border:none;clear:
 
 <h1>User reports</h1>
 
-Currently we have more than 270 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
+Currently we have more than 280 detailed reports. Please also fill out the <a href="/questionnaire">FAI questionnaire</a>. 
 <p>
 <hr/>
+
+<b>From:</b> Tobias Kreilos,  firstname dot lastname @ physik.uni dash marburg de
+<br><b>Date:</b> Wed, 20 Feb 2013 15:00:24 +0100
+<pre>
+How many hosts have you installed using fai? <b>14</b>
+Which version of fai are you using? <b>3.4.8</b>
+
+Which version are you using as your install kernel? Plain Debian Wheezy (3.2)
+
+Which types of hosts are you installing with fai? Desktops
+
+How do you boot your hosts?
+  via network (PXE, DHCP): 8
+             using FAI-CD: 6
+
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? None
+Do you manage your configuration space under version control? Not yet
+
+How big is your config space (Mbytes, # of files)? 1.4G, 93 files (including some proprietary software
+    that gets automatically installed)
+How many files do you have in ../config/files? 41
+What types of scripts are you using for local customization? shell
+
+<b>What is the business of your company/organisation?</b> <a href="http://www.uni-marburg.de/fb13/forschung/komplexe-systeme">Working group at physics departement of university of Marburg</a>
+<br><b>Additional comments:</b>
+It took some time to set it up, but now installing and updating became so easy :)
+</pre> <HR>
+
+
 
 <b>From:</b> Paolo Miotto = paolo. miotto @at@ uniud dot it
 <br><b>Date:</b> Mon, 04 Feb 2013 14:01:00 +0100
